tests/fixtures/invalid/pow_set_list_set.py
# Cannot call pow() with Set[int], List[int], Set[int]
x = pow({1, 2, 3}, [1, 2, 3], {1, 2, 3})
